navbar alignment fixed

--- a/01. Shopping - JavaScript/src/style.css
+++ b/01. Shopping - JavaScript/src/style.css
@@ -24,6 +24,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 30px;
 }
 
